Fix: move large prompt strings to resources and avoid source-level Unicode escapes